--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
 <head>
 <title>Skilled Task</title>
+<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
-    
+    <div class="topnav" id="myTopnav">
+        <a href="#case" class="active">Case</a>
+        <a href="#demo">Demo</a>
+        <a href="#contact">Order</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+
 </body>
 </html> 
