--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ h1 a {
   <p style="display: inline-block; color: white;margin-left: 30px; padding-left: 30px; padding-right: 30px; border-radius: 8px; background-color: red; font-weight: bold;">FREE TRIAL</p>
 
   <div style="display: flex; align-items: center; text-align: center; margin-top: 100px;">
-    <img src="/home/md-steve/Pictures/image2.png" style="display: inline-block; float: left; margin-left: -30px;" />
+    <img src="/home/md-steve/Pictures/image2.png" style="display: inline-block; float: none; margin-left: -30px;" />
     <h1 style="margin-left: 400px;">FEATURE</h1>
   </div>
   <div class="w3-row-padding w3-center" style="margin-top: 2px; display: flex; flex-direction: column; align-items: center;">
@@ -249,7 +249,7 @@ h1 a {
 </div>
 
 <!---Purchase plan-->
-<div class="w3-container w3-center" style="" id="pricing">
+<div class="w3-container w3-center" id="pricing">
   
 
   <p class="w3-large" style="color: red; font-weight: bold;text-align: left;margin-left: 90px;margin-top: 30px;">Purchase Plan.</p>
