--- a/index.html
+++ b/index.html
@@ -20,12 +20,20 @@
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script> 
 <style>
 
-@media (min-width: 2000px) {
+@media (max-width: 2000px) {
     #order{
       display: inline-block;
     }
 }
 
+
+@media (max-width:1000px) {
+  table {
+    margin: 0 auto;
+    max-width: 100%;
+   }
+  
+}
 
 
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
@@ -168,7 +176,7 @@ h1 a {
     <h3 style="font-size: 100px; color: black; font-weight: bold; text-align: left; margin-left: 20px;">SKILLED</h3>
     <img src="main_image.png" style="display: inline-block;" alt="Main Image" />
   </div>
-  <p style="display: inline-block; color: white;margin-left: 30px; padding-left: 30px; padding-right: 30px; border-radius: 8px; background-color: red; font-weight: bold;text-align: center; width: 35%;max-width:  80%;">FREE TRIAL</p>
+  <p style="display: inline-block; color: white;margin-left: 30px; padding-left: 30px; padding-right: 30px; border-radius: 8px; background-color: red; font-weight: bold;text-align: center;">FREE TRIAL</p>
 
   <div style="display: flex; align-items: center; text-align: center; margin-top: 100px;">
     <img src="/home/md-steve/Pictures/image2.png" style="display: inline-block; float: none; margin-left: -30px;" />
@@ -196,7 +204,7 @@ h1 a {
 
 </div>
 <!-- Function ection -->
-<div class="w3-container"  style="display: flex;justify-content: space-between;padding:128px 16px; background-color: #d5dbd6;" id="team">
+<div class="w3-container"  style="display: flex;justify-content: space-between;padding:128px 16px; background-color: #d5dbd6;" id="function-section">
   <h3 class="w3-left" style="padding: top 0; margin-left: 60px; font-weight: bold;">FUNCTION</h3>
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom" style="background-color: white;">
@@ -348,7 +356,7 @@ h1 a {
 <!---Compare plans div-->
 <div style="background-color: #c4c9cf;">
 <h3 style="font-weight: bold; margin-left: 100px; margin-right: 20px;">Compare Plans</h3>
-<table style="margin-left: 100px; width: 100%; text-align:center; background-color: white;">
+<table style="margin-left: 100px; width: 70%;text-align:center; background-color: white;">
   <tr>
     <th>     </th>
     <th style="background-color: darkblue; color: white;">Subscription plan</th>
